--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,5 +1,8 @@
-<ion-tabs>
-  <ion-tab [root]="tab1Root" tabTitle="Home" tabIcon="home"></ion-tab>
-  <ion-tab [root]="tab2Root" tabTitle="About" tabIcon="information-circle"></ion-tab>
-  <ion-tab [root]="tab3Root" tabTitle="Contact" tabIcon="contacts"></ion-tab>
-</ion-tabs>
+
+    <ion-tabs>
+        <ion-tab tabIcon="water" tabTitle="Water" [root]="tab1Root"></ion-tab>
+        <ion-tab tabIcon="leaf" tabTitle="Life" [root]="tab2Root"></ion-tab>
+        <ion-tab tabIcon="flame" tabTitle="Fire" [root]="tab3"></ion-tab>
+        <ion-tab tabIcon="magnet" tabTitle="Force" [root]="tab3Root"></ion-tab>
+      </ion-tabs>
+  
