new pluging added

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -5,5 +5,8 @@
 </ion-header>
 
 <ion-content padding>
-  git remote add origin<a href="https://github.com/hiprince1998/Updates.git">click git hub</a>
+
+  <button ion-button (click)="vibrate()">Vibrate</button>
+<button ion-button color="secondary" (click)="stopVibrate()">Stop vibrate</button> 
+
 </ion-content>
