--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -7,5 +7,12 @@
 </ion-header>
 
 <ion-content padding>
-
+<ion-card>
+  <ion-card-title>
+    about
+  </ion-card-title>
+  <ion-card-content>
+    <p>my name is prince kumar and i am a good boy </p>
+  </ion-card-content>
+</ion-card>
 </ion-content>
